--- a/README.org
+++ b/README.org
@@ -62,6 +62,17 @@ terrible if there is a large number of errors.
 I also force ~subword-mode~, as I code with case.
 
 
+** Go
+
+*** Dependencies
+
+- ~go get -u golang.org/x/tools/cmd/...~
+- ~go get -u github.com/rogpeppe/godef/...~
+- ~go get -u github.com/nsf/gocode~
+- ~go get -u golang.org/x/tools/cmd/goimports~
+- ~go get -u golang.org/x/tools/cmd/guru~
+- ~go get -u github.com/dougm/goflymake~
+
 * Finally
 
 ** TODOs
