--- a/README.org
+++ b/README.org
@@ -24,6 +24,33 @@ particular:
 If any of this sounds useful, read on!
 
 
+* External Dependencies
+
+** LSP
+
+These are needed for LSP modes:
+
+- bash :: ~npm i -g bash-language-server~
+- CSS :: ~npm install -g vscode-css-languageserver-bin~
+- HTML :: ~npm install -g vscode-html-languageserver-bin~
+- Typescript :: ~npm i -g typescript-language-server; npm i -g typescript~
+- VUE :: ~npm install -g vue-language-server~
+- Python :: ~pip install 'python-language-server[all]'~
+- cquery :: https://github.com/cquery-project/cquery
+- Go :: https://github.com/saibing/bingo/wiki/Install
+
+** Go
+
+These need to be evaluated based on the LSP support
+- ~go get -u golang.org/x/tools/cmd/...~
+- godef :: ~go get -u github.com/rogpeppe/godef/...~
+- ~go get -u github.com/nsf/gocode~
+- goimports :: ~go get -u golang.org/x/tools/cmd/goimports~
+- guru :: ~go get -u golang.org/x/tools/cmd/guru~
+- flymake :: ~go get -u github.com/dougm/goflymake~
+
+
+
 * Platform Support
 
 * Major Modes
