--- a/README.org
+++ b/README.org
@@ -5,9 +5,9 @@ This is Brian's emacs config, it's geared towards my specific use cases, in
 particular:
 
 
-- I'm a C++ programmer in my day job for [[https://www.oblong.com/][Oblong Industries]]
-  - I also use Python, JS, TypeScript, and HTML regularly
-- I heavily use both linux and mac, but I cut my teeth on *BSD distributions
+- I'm a C++/Web programmer in my day job for [[https://www.oblong.com/][Oblong Industries]]
+  - I also use Python, React, and Electron
+- I heavily use both linux, mac, and windows... but I cut my teeth on *BSD distributions
 - Outside of work I use C++, C, Ada, Go, Julia, Python, and JS/HTML
 - Despite my initial resistence to it, I'm a git convert and use it for
   everything
@@ -53,32 +53,14 @@ These need to be evaluated based on the LSP support
 
 * Platform Support
 
+** Windows
+
+I've found that having certain unicode chars in the mode line causes all
+updates on windows to be really slow, so I've removed my usage of those chars.
+
 * Major Modes
 
 ** C/C++
-
-*** Code Completion (RTags)
-
-I use [[https://github.com/Andersbakken/rtags][RTags]] for most code completion paired with company-mode for code
-completion.  I've had a difficult time with Homebrew on mac breaking my RTags
-setup many times so currently I do the following steps:
-
-1. Download an [[https://llvm.org/][LLVM]] release to ~${HOME}/LLVM/clang+llvm-<version>-<platform>~
-2. Clone RTags to ~${HOME}/src~ and build pointing to the downloaded LLVM (in
-   the below example I'm using LLVM 5.0.1 on macOS)
-   1. ~LLVMDIR=${HOME}/LLVM~
-   2. ~mkdir -p ${LLVMDIR}~
-   3. ~cd ${LLVMDIR}~
-   4. ~tar tf ${HOME}/Downloads/clang+llvm-5.0.1-x86_64-apple-darwin.tar.xz~
-   5. ~mkdir ${HOME}/src~
-   6. ~cd ${HOME}/src~
-   7. ~git clone --recursive https://github.com/Andersbakken/rtags.git~
-   8. ~mkdir build && cd build~
-   9. ~LIBCLANG_LLVM_CONFIG_EXECUTABLE=${LLVMDIR}/clang+llvm-5.0.1-final-x86_64-apple-darwin/bin/llvm-config cmake -DCMAKE_EXPORT_COMPILE_COMMANDS=1 -DCMAKE_INSTALL_PREFIX=${HOME}/.local -GNinja ..~
-   10. ~ninja -j4 install~
-3. Configure RDM to run automatically
-   - [[file:~/src/rtags/README.org::*Integration%20with%20%3Dlaunchd%3D%20/(Mac%20OS%20X)/][macOS Instructions]]
-   - [[file:~/src/rtags/README.org::*Integration%20with%20%3Dsystemd%3D%20/(GNU%20Linux)/][linux instructions]]
 
 *** Other notes
 
@@ -87,7 +69,6 @@ I jump to the end (which is great if there's a small number of errors, but
 terrible if there is a large number of errors.
 
 I also force ~subword-mode~, as I code with case.
-
 
 ** Go
 
@@ -105,13 +86,9 @@ I also force ~subword-mode~, as I code with case.
 ** TODOs
 
 - Org HTML Export :: Not working with this config, but works with no config...
-- Windows support :: I'm doing more on windows due to limiations on mac, so I
-     need to add some support for this
 - macOS :: Add support for the touch bar :-D
 
 ** Included 3rd party code
-
-- ~themes/fairyfloss.el~ :: converted from Fairyfloss by @sailorhg, [[https://github.com/sailorhg/fairyfloss][github]], [[http://sailorhg.github.io/fairyfloss/][website]].
 
 ** License
 
